[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/Peg/Peg.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/BallBasket/BallBasket.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Levels/Level1/Level1.gd" type="Script" id=3]
[ext_resource path="res://scenes/Levels/Level1/LevelUI.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/Wall/Wall.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/BallBucket/BallBucket.tscn" type="PackedScene" id=6]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 1087, 565, 0, 0, 0, 0, -49, 565 )
}

[node name="Level" type="Node2D"]
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1027.0
margin_bottom = 600.0
color = Color( 0.2, 0.0470588, 0.0470588, 1 )

[node name="BallShooter" parent="." instance=ExtResource( 2 )]
position = Vector2( 483, 0 )
scale = Vector2( 3, 3 )

[node name="Pegs" type="Node2D" parent="."]
z_index = 1

[node name="Peg" parent="Pegs" instance=ExtResource( 1 )]
position = Vector2( 196, 220 )

[node name="Peg2" parent="Pegs" instance=ExtResource( 1 )]
position = Vector2( 303, 258 )

[node name="Peg3" parent="Pegs" instance=ExtResource( 1 )]
position = Vector2( 120, 134 )

[node name="Peg4" parent="Pegs" instance=ExtResource( 1 )]
position = Vector2( 141, 166 )

[node name="Peg5" parent="Pegs" instance=ExtResource( 1 )]
position = Vector2( 168, 194 )

[node name="Peg6" parent="Pegs" instance=ExtResource( 1 )]
position = Vector2( 227, 238 )

[node name="Peg7" parent="Pegs" instance=ExtResource( 1 )]
position = Vector2( 358, 425 )

[node name="Peg8" parent="Pegs" instance=ExtResource( 1 )]
position = Vector2( 235, 344 )

[node name="Peg9" parent="Pegs" instance=ExtResource( 1 )]
position = Vector2( 217, 313 )

[node name="Peg10" parent="Pegs" instance=ExtResource( 1 )]
position = Vector2( 180, 306 )

[node name="Peg11" parent="Pegs" instance=ExtResource( 1 )]
position = Vector2( 153, 332 )

[node name="Peg12" parent="Pegs" instance=ExtResource( 1 )]
position = Vector2( 343, 261 )

[node name="Peg13" parent="Pegs" instance=ExtResource( 1 )]
position = Vector2( 172, 369 )

[node name="Peg14" parent="Pegs" instance=ExtResource( 1 )]
position = Vector2( 211, 372 )

[node name="Peg15" parent="Pegs" instance=ExtResource( 1 )]
position = Vector2( 316, 406 )

[node name="Peg16" parent="Pegs" instance=ExtResource( 1 )]
position = Vector2( 265, 251 )

[node name="Peg17" parent="Pegs" instance=ExtResource( 1 )]
position = Vector2( 416, 434 )

[node name="Peg18" parent="Pegs" instance=ExtResource( 1 )]
position = Vector2( 584, 237 )

[node name="Peg19" parent="Pegs" instance=ExtResource( 1 )]
position = Vector2( 582, 315 )

[node name="LevelUIContainer" type="Node2D" parent="."]

[node name="LevelUI" parent="LevelUIContainer" instance=ExtResource( 4 )]

[node name="Walls" type="Node2D" parent="."]
z_index = 2

[node name="LeftWall" parent="Walls" instance=ExtResource( 5 )]
position = Vector2( 0, -2 )
color = Color( 0.372549, 0.803922, 0.894118, 1 )

[node name="Ceiling" parent="Walls" instance=ExtResource( 5 )]
position = Vector2( 1029, -1 )
rotation = 1.5708
scale = Vector2( 1, 2 )
color = Color( 0.372549, 0.803922, 0.894118, 1 )

[node name="RightWall" parent="Walls" instance=ExtResource( 5 )]
position = Vector2( 1022, -2 )
color = Color( 0.372549, 0.803922, 0.894118, 1 )

[node name="BallBucket" parent="." instance=ExtResource( 6 )]
position = Vector2( 498, 573 )

[node name="BallBucketPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="BallBucketPosition" type="PathFollow2D" parent="BallBucketPath"]
position = Vector2( 1087, 565 )
rotation = -3.14156
